     make -C $DAIKONDIR/java javadoc
   It is also available at http://plse.cs.washington.edu/daikon/download/api/ .

===========================================================================

5.3.10 (August 1, 2016)

A new front end for LLVM is available.
See https://github.com/markus-kusano/udon.
You can use it with any program that can be compiled to LLVM.

Daikon does stricter checking of its input files.  Older versions of Kvasir
and Chicory create invalid .decls or .dtrace files, which Daikon now
rejects.  If this happens, re-run the front end to create new, correct files.

Updated the Binutils-based code in Fjalar/Kvasir to v2.26.1.
There should be no user-visible differences in the behavior of Kvasir.

===========================================================================

5.3.8 (August 1, 2016)

Improved portability:
 * support g++ 6.1
 * support Fedora 23
 * support newer version of jdk8

Miscellaneous bug fixes and minor improvements.

===========================================================================

5.3.6 (July 5, 2016)

A new front end for Simulink/Stateflow (SLSF) block diagrams is available.
See https://bitbucket.org/verivital/hynger .

Fjalar/Kvasir:
 - DynComp has been modified to improve its accuracy and correct its
   garbage collection routine.

===========================================================================

5.3.4 (June 1, 2016)

Miscellaneous bug fixes and minor improvements.

===========================================================================

5.3.2 (May 2, 2016)

Daikon:
 - Command-line argument --user-defined-invariant makes Daikon compute a
   user-defined invariant in addition to those that are built in to Daikon.
 - Command-line argument --disable-all-invariants disables all of Daikon's
   built-in invariants.  Subsequent command-line options may enable some of
   them.

Fjalar/Kvasir:
 - Minor changes to support Scientific Linux.

Documentation: